<resources>
    <!-- app info -->
    <string name="app_name">Donkey Mobile</string>
    <string name="example_text">Example text</string>

    <!-- Login flow -->
    <string name="login_title">Uw kerken en communities</string>
    <string name="login_description">Login en bekijk de meest recente posts binnen uw communities</string>
    <string name="login_username_hint">Vul gebruikersnaam in</string>
    <string name="login_password_hint">Vul wachtwoord in</string>
    <string name="login_button">Inloggen</string>
    <string name="login_error">Gebruikersnaam en/of wachtwoord combinatie bestaat niet</string>

    <!-- Logout flow -->
    <string name="logout_button">Uitloggen</string>

    <!-- content descriptions -->
    <string name="cd_splash_icon">Splash icon</string>
    
    <!-- fallbacks -->
    <string name="time_fallback">Datum en tijd onbekend</string>

    <!-- Error -->
    <string name="communities_error">Hmm, er ging iets mis tijdens het ophalen van de communities. Probeer het later nog eens.</string>
</resources>